# air-waiter

./: pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
air_waiter/: __init__.py  wait.py
src/: wait.py
tests/: test_wait.py
